--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "axios": "^0.20.0",
+    "formik": "^2.1.5",
     "next": "9.5.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -20,6 +21,7 @@
     "swr": "^0.3.1"
   },
   "devDependencies": {
+    "@babel/plugin-transform-flow-strip-types": "^7.10.4",
     "@types/node": "^14.6.0",
     "typescript": "^4.0.2"
   }
